--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,42 @@
-body {
-  font-family: 'Arial', sans-serif;
-  background-color: #f0f0f0;
-  margin: 0;
-  padding: 0;
+*{
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-h1 {
-  color: #333;
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal {
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  max-width: 400px;
+  text-align: center;
+}
+
+.card img {
+  cursor: pointer;
+}
+
+.card {
+  display: inline-block;
+  margin: 10px;
+  padding: 20px;
+  text-align: center;
+  cursor: pointer;
+  background-color: bisque;
+}
+.card h3{
+  
+text-transform: uppercase;
 }
