--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@
 }
 
 .modal {
+  position: relative; 
   background: white;
   padding: 20px;
   border-radius: 10px;
@@ -24,9 +25,27 @@
   text-align: center;
 }
 
-.card img {
+
+.modal button {
+  position: absolute;
+  top: 10px;    
+  right: 10px;  
+  background: transparent;
+  border: none;
+  font-size: 20px;
   cursor: pointer;
 }
+
+
+  .card img {
+  width: 100%;           
+  height: 100px;         
+  object-fit: cover;     
+  border-radius: 4px;
+  cursor:pointer;
+}
+  
+
 
 .card {
   display: inline-block;
